--- a/Vlearn/app/src/main/res/values/strings.xml
+++ b/Vlearn/app/src/main/res/values/strings.xml
@@ -56,6 +56,7 @@ Donec ullamcorper dictum blandit. Vestibulum porta leo vel volutpat malesuada. A
     <string name="submit">Submit</string>
     <string name="topic_question_regarding_what">Topic (Question regarding what?)</string>
     <string name="description">Description</string>
+    <string name="submit">Submit</string>
 
     <string-array name="venues">
         <item>Seminar Hall 06</item>
