--- a/Vlearn/app/src/main/res/values/strings.xml
+++ b/Vlearn/app/src/main/res/values/strings.xml
@@ -61,5 +61,7 @@ Donec ullamcorper dictum blandit. Vestibulum porta leo vel volutpat malesuada. A
         <item>Seminar Hall 506</item>
         <item>AUDITORIUM</item>
     </string-array>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
