--- a/Vlearn/app/src/main/res/values/strings.xml
+++ b/Vlearn/app/src/main/res/values/strings.xml
@@ -63,5 +63,7 @@ Donec ullamcorper dictum blandit. Vestibulum porta leo vel volutpat malesuada. A
     </string-array>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="log_out">Log Out</string>
+    <string name="profile">Profile</string>
 
 </resources>
